<resources>
    <string name="app_name" translatable="false">Drini</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="facebook_app_id" translatable="false">731008968599167</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">a7b733f8e877aa2dd44926b7cb7e045a</string>
    <string name="about_us">About Us</string>
    <string name="about_us_text">About Us Text</string>
    <string name="account">Account</string>
    <string name="nickname">Nickname</string>
    <string name="user_type">User Type</string>
    <string name="your_cocktails">Your Cocktails</string>
    <string name="new_review">New Review</string>
    <string name="whiskey_and_cola">Whiskey and Cola</string>
    <string name="creator">Creator</string>
    <string name="rating">Rating</string>
    <string name="input_comment">Input comment</string>
    <string name="private_text">Private</string>
    <string name="post">Post</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="add_review">+ Add Review</string>
    <string name="cocktail">Cocktail</string>
    <string name="recipe">Recipe</string>
    <string name="comments">Comments</string>
    <string name="verify_email">Verify Email</string>
    <string name="resend_code">Resend Code</string>
    <string name="check">Check</string>
    <string name="sign_out">Sign Out</string>
    <string name="help_and_support">Help and Support</string>
    <string name="how_can_we_help_you">How can we help you ?</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="languages">Languages</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t Have Account ?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="search">Search</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="the_list_of_suggests_is_empty">The list of suggests is empty!</string>
    <string name="list_of_moderators">List of moderators</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="there_are_no_moderators">There are no moderators!</string>
    <string name="add_new_moderator">Add New Moderator</string>
    <string name="insert_email">Insert Email</string>
    <string name="add">Add</string>
    <string name="there_are_no_notifications">There are no notifications!</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="are_you_older_18">Are you older 18</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="there_are_no_cocktails_available">There are no cocktails available!</string>
    <string name="reset">Reset</string>
    <string name="image">Image</string>
    <string name="click_to_choose_image">Click to choose image</string>
    <string name="remove_images">Remove Images</string>
    <string name="cocktail_name">Cocktail Name</string>
    <string name="cocktail_recipe_step_by_step">Cocktail Recipe (Step-by-step)</string>
    <string name="step_1">Step 1</string>
    <string name="step">Step</string>
    <string name="add_step">Add Step</string>
    <string name="remove_last_step">Remove Last Step</string>
    <string name="enter_tags_break_with_commas">Tags(break with commas)</string>
    <string name="publish">Publish</string>
    <string name="the_list_of_favourites_is_empty">The list of favourites is empty!</string>
    <string name="cocktails">Cocktails</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="moderators">Moderators</string>
    <string name="moderate">Moderate</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="commenter_name">Commenter Name</string>
    <string name="creator_name">Creator name</string>
    <string name="added_in_01_01_2023">Added in 01.01.2023</string>
    <string name="recipe_step">Recipe Step</string>
    <string name="changing_language">Changing Language</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="custom">Custom</string>
    <string name="okay">Okay</string>
    <string name="verification_sent">Verification Email Sent</string>
    <string name="added">Added</string>
    <string name="type_cocktail_name_here">Type cocktail name here</string>
    <string name="type_tags_here">Type tags here</string>
    <string name="manage_moderators">Manage Moderators</string>
    <string name="donate">Donate</string>
    <string name="please_wait">Pleas Wait…</string>
    <string name="enter_existing_email">Enter Existing Email</string>
    <string name="password_empty">Password field is empty</string>
    <string name="password_short">Password is short (need more than 8 characters)</string>
    <string name="wrong_password">Wrong password</string>
    <string name="wrong_email">Wrong Email</string>
    <string name="enter_registered_email">Enter your registered email</string>
    <string name="check_email">Check your email</string>
    <string name="unable_to_send_email">Unable to send, failed</string>
    <string name="username_short">Username is too short</string>
    <string name="type_email">Type your Email</string>
    <string name="password_confirm_doesnt_match">Password Confirm Doesn\'t Match</string>
    <string name="or">or</string>
    <string name="glasses_types">Glasses types</string>
    <string name="top_10_cocktails">Top 10 Cocktails</string>
    <string name="there_are_no_cocktails_of_such_type">There are no cocktails of such type</string>
    <string name="it_looks_like_you_are_experiencing_problems_with_app_we_are_here_to_help_so_please_get_in_touch_with_us">It looks like you are experiencing problems with app. We are here to help so please get in touch with us</string>
    <string name="introducing_our_company_that_specializes_in_cocktail_recipes_our_app_provides_users_with_access_to_hundreds_of_unique_and_creative_cocktail_recipes_that_can_be_made_right_at_home_with_step_by_step_instructions_and_ingredient_lists_our_app_is_perfect_for_both_beginners_and_seasoned_mixologists_whether_you_re_looking_for_a_classic_cocktail_or_something_more_adventurous_our_app_has_something_for_everyone_download_it_today_and_start_crafting_delicious_cocktails_in_the_comfort_of_your_own_home">Introducing our company that specializes in cocktail recipes. Our app provides users with access to hundreds of unique and creative cocktail recipes that can be made right at home. With step-by-step instructions and ingredient lists, our app is perfect for both beginners and seasoned mixologists. Whether you\'re looking for a classic cocktail or something more adventurous, our app has something for everyone. Download it today and start crafting delicious cocktails in the comfort of your own home!</string>
    <string name="profile">Profile</string>

</resources>