<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.EmailConfirmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_300sdp"
            android:src="@drawable/verify_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/metropolislight"
                android:gravity="center"
                android:text="@string/verify_email"
                android:textColor="@color/white"
                android:textSize="@dimen/_35ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:layout_marginBottom="@dimen/_35sdp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/resend_code_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/metropolislight"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/resend_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/check_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:layout_below="@id/resend_code_confirm"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/check"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:layout_below="@id/check_button"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/sign_out"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />



            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>




</ScrollView>