<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogForgot"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_box"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background_color_dark">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_title"
            android:text="@string/forgot_password"
            android:padding="10dp"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableLeftCompat="@drawable/ic_baseline_lock_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/white"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:endIconMode="clear_text"
            app:errorTextColor="@color/red_light"
            app:boxStrokeColor="@color/grey_dark"
            app:helperTextTextColor="@color/white"
            app:helperTextEnabled="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:boxStrokeErrorColor="@color/red_light"
            app:helperText=" "
            app:errorEnabled="true"
            app:boxBackgroundColor="@color/background_color_light"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:endIconTint="@color/white"
            app:counterTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/forgot_title"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
            app:startIconTint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_box"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_13sdp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btn_cancel"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius = "20dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/circle"
            app:layout_constraintTop_toBottomOf="@id/register_email_layout"
            app:layout_constraintBottom_toBottomOf="@id/dialog_box"
            app:layout_constraintEnd_toStartOf="@id/btn_reset"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btn_reset"
            android:text="@string/reset"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/white"
            android:background="@drawable/circle"
            android:textSize="14sp"
            app:cornerRadius = "20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialog_box"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
