<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/background_color"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:translationZ="10dp"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/endBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="300"
                android:orientation="vertical"
                android:foregroundGravity="bottom">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_325sdp"
                    android:gravity="center_horizontal">



                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/remove_images"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:backgroundTintMode="screen"
                        android:layout_alignParentRight="true"
                        android:translationZ="@dimen/_50sdp"
                        android:backgroundTint="@color/black"
                        android:background="@drawable/ic_baseline_close_16"
                        app:shapeAppearanceOverlay="@style/ImageView.Circle" />


                    <FrameLayout
                        android:id="@+id/slider_container"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_325sdp">

<!--                        <com.denzcoskun.imageslider.ImageSlider-->
<!--                            android:id="@+id/imageSlider"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:background="@color/background_color"-->
<!--                            app:iss_auto_cycle="false"-->
<!--                            app:iss_indicator_align="@string/app_name"-->
<!--                            app:iss_title_background="@drawable/gradient" />-->

                        <ImageView
                            android:id="@+id/imageChooseText"
                            android:layout_width="@dimen/_125sdp"
                            android:layout_height="@dimen/_125sdp"
                            android:background="@drawable/ic_plus"
                            android:backgroundTint="@color/white"
                            android:layout_gravity="center"/>

                    </FrameLayout>

                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/_250sdp"
                    android:maxHeight="@dimen/_80sdp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:autoSizeTextType="uniform"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:text="@string/cocktail_name"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:textSize="@dimen/_22sdp"/>

                <EditText
                    android:id="@+id/cocktailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:textSize="@dimen/_16sdp"
                    android:hint="@string/type_cocktail_name_here"
                    android:backgroundTint="@color/background_color_light"
                    android:textColorHint="@color/edit_text_color"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_7sdp"
                    android:textColor="@color/white"
                    android:background="@drawable/borders_for_search_bar"
                    android:layout_marginBottom="@dimen/_20sdp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white_transparency"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/_250sdp"
                    android:maxHeight="@dimen/_80sdp"
                    android:layout_gravity="bottom"
                    android:autoSizeTextType="uniform"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="left"
                    android:text="@string/enter_tags_break_with_commas"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:textSize="@dimen/_20sdp"/>

                <MultiAutoCompleteTextView
                    android:id="@+id/tagsACTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:textSize="@dimen/_16sdp"
                    android:hint="@string/type_tags_here"
                    android:backgroundTint="@color/background_color_light"
                    android:textColorHint="@color/edit_text_color"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_7sdp"
                    android:textColor="@color/white"
                    android:background="@drawable/borders_for_search_bar"
                    android:layout_marginBottom="@dimen/_20sdp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white_transparency" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cocktail_recipe_step_by_step"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    />

                <LinearLayout
                    android:id="@+id/cocktailRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/recipe_first_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:textSize="@dimen/_16sdp"
                        android:hint="@string/step_1"
                        android:backgroundTint="@color/background_color_light"
                        android:textColorHint="@color/edit_text_color"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/_12sdp"
                        android:paddingVertical="@dimen/_7sdp"
                        android:textColor="@color/white"
                        android:background="@drawable/borders_for_search_bar"
                        android:layout_marginBottom="@dimen/_15sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/add_step"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_step"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@color/grey_dark"
                        android:textSize="@dimen/_13ssp"
                        android:textAlignment="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:paddingHorizontal="@dimen/_10sdp"/>

                    <TextView
                        android:id="@+id/remove_step"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_last_step"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@color/grey_dark"
                        android:textSize="@dimen/_13ssp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_5sdp"/>

                </LinearLayout>




                <TextView
                    android:id="@+id/publish_recipe"
                    android:layout_width="@dimen/_225sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@drawable/circle_rate"
                    android:backgroundTint="@color/orange"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="@dimen/_15sdp"
                    android:text="@string/publish"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:translationZ="@dimen/_30sdp" />

            </LinearLayout>
        </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
